--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,15 +10,23 @@ jobs:
       matrix:
         include:
           - name: asn.mmdb
+          - name: asn.json.gz
+          - name: asn.csv.gz
+          - name: country.mmdb
+          - name: country.json.gz
+          - name: country.csv.gz
+          - name: country_asn.mmdb
+          - name: country_asn.json.gz
+          - name: country_asn.csv.gz
     runs-on: ubuntu-latest
     steps:
       - name: 获取系统日期
         id: datetime
         run: echo "time=$(date +%Y%m%d%H%M%S)" > $GITHUB_OUTPUT
       - uses: actions/checkout@master
-      - uses: JasonEtco/build-and-tag-action@v2
-        with:
-          tag_name: ${{ steps.datetime.outputs.time }}
+        run: |
+            git tag ${{ steps.datetime.outputs.time }}
+            git push origin ${{ steps.datetime.outputs.time }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
       - name: Create Release
