--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ jobs:
         id: datetime
         run: echo "time=$(date +%Y%m%d%H%M%S)" > $GITHUB_OUTPUT
       - uses: actions/checkout@master
-      - name: git标签${{ steps.datetime.outputs.time }}
+      - name: 增加标签${{ steps.datetime.outputs.time }}
         run: |
             git tag ${{ steps.datetime.outputs.time }}
             git push origin ${{ steps.datetime.outputs.time }}
@@ -32,6 +32,10 @@ jobs:
           release_name: Release ${{ steps.datetime.outputs.time }}
           draft: false
           prerelease: false
+      - name: 移除标签${{ steps.datetime.outputs.time }}
+        run: git push --delete origin ${{ steps.datetime.outputs.time }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
       - name: publish
         uses: actions/upload-release-asset@v1
         env:
@@ -40,3 +44,4 @@ jobs:
           upload_url: https://ipinfo.io/data/free/${{ matrix.name }}?token=${{ secrets.IPINFO_TOKEN }}
           asset_path: ./${{ matrix.name }}
           asset_name: ${{ matrix.name }}
+          asset_content_type: application/octet-stream
