--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          upload_url: ${{ jobs.release.steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./asn.mmdb
           asset_name: asn.mmdb
           asset_content_type: application/octet-stream
