--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,6 +7,9 @@ on: workflow_dispatch
 jobs:
   release:
     runs-on: ubuntu-latest
+    defaults:
+    run:
+      working-directory: ./
     steps:
       - name: 获取系统日期
         id: datetime
