--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,29 +5,43 @@ name: 下载geoip数据
 
 on: workflow_dispatch
 jobs:
-  release:
+  build:
+    strategy:
+      matrix:
+        include:
+          - name: asn.mmdb
+          - name: asn.json.gz
+          - name: asn.csv.gz
+          - name: country.mmdb
+          - name: country.json.gz
+          - name: country.csv.gz
+          - name: country_asn.mmdb
+          - name: country_asn.json.gz
+          - name: country_asn.csv.gz
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./
     steps:
+      - uses: actions/checkout@master
+      - name: 下载文件
+        run: wget https://ipinfo.io/data/free/${{ matrix.name }}?token=${{ matrix.name }} -o ./${{ matrix.name }}
+      - name: 提交geoIP文件${{ matrix.name }}
+        run: |
+          git add ./${{ matrix.name }}
+          git commit -m "提交更新文件${{ matrix.name }}"
+          git push
+
+  release:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
       - name: 获取系统日期
         id: datetime
         run: echo "time=$(date +%Y%m%d%H%M%S)" > $GITHUB_OUTPUT
       - uses: actions/checkout@master
-        id: git_checkout
-      - name: 下载资源文件
-        run: |
-          ls
-          cd .
-          ls
-          ./wget_ipinfo.sh 122323
+        id: git_checkout          
       - name: 发布版本
         run: |
-          ls
-          git add .
-          git commit -m "版本发布${{ steps.datetime.outputs.time }}"
-          git push origin
+          ls -la
           git tag ${{ steps.datetime.outputs.time }}
           git push origin ${{ steps.datetime.outputs.time }}
         env:
@@ -46,12 +60,30 @@ jobs:
         run: git push --delete origin ${{ steps.datetime.outputs.time }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
+
+  upload:
+    needs: [build, release]
+    strategy:
+      matrix:
+        include:
+          - name: asn.mmdb
+          - name: asn.json.gz
+          - name: asn.csv.gz
+          - name: country.mmdb
+          - name: country.json.gz
+          - name: country.csv.gz
+          - name: country_asn.mmdb
+          - name: country_asn.json.gz
+          - name: country_asn.csv.gz
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
       - name: 发布文件
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./asn.mmdb
-          asset_name: asn.mmdb
+          upload_url: ${{ needs.release.steps.create_release.outputs.upload_url }}
+          asset_path: ./${{ matrix.name }}
+          asset_name: ${{ matrix.name }}
           asset_content_type: application/octet-stream
