--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,8 @@ jobs:
           git add ./${{ matrix.name }}
           git commit -m "提交更新文件${{ matrix.name }}"
           git push
-
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
   release:
     needs: [build]
     runs-on: ubuntu-latest
