--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,20 @@ jobs:
       - name: 发布版本
         run: |
           ls -la
+          mv asn.mmdb?token=7617e71ea49806 asn.mmdb
+          mv asn.json.gz?token=7617e71ea49806 asn.json.gz
+          mv asn.csv.gz?token=7617e71ea49806 asn.csv.gz
+          mv country.mmdb?token=7617e71ea49806 country.mmdb
+          mv country.json.gz?token=7617e71ea49806 country.json.gz
+          mv country.csv.gz?token=7617e71ea49806 country.csv.gz
+          mv country_asn.mmdb?token=7617e71ea49806 country_asn.mmdb
+          mv country_asn.json.gz?token=7617e71ea49806 country_asn.json.gz
+          mv country_asn.csv.gz?token=7617e71ea49806 country_asn.csv.gz
+          git config --global user.email "preferhu@qq.com"
+          git config --global user.name "cnartlu"
+          git add .
+          git commit -m "提交更新文件${{ matrix.name }}"
+          git push
           git tag ${{ steps.datetime.outputs.time }}
           git push origin ${{ steps.datetime.outputs.time }}
         env:
@@ -34,10 +48,6 @@ jobs:
           release_name: Release ${{ steps.datetime.outputs.time }}
           draft: false
           prerelease: false
-      - name: 移除版本
-        run: git push --delete origin ${{ steps.datetime.outputs.time }}
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
 
   upload:
     needs: [release]
@@ -56,9 +66,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: 输出变量
-        run: |
-          echo ${{ needs.release.outputs.upload_url }}
       - name: 发布文件
         uses: actions/upload-release-asset@v1
         env:
