--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: 下载geoip数据
+name: 下载更新发版
 
 on: workflow_dispatch
 jobs:
@@ -25,6 +25,9 @@ jobs:
   release:
     needs: [build]
     runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+      tag_name: ${{ steps.datetime.outputs.time }}
     steps:
       - uses: actions/checkout@master
       - name: 获取系统日期
@@ -53,10 +56,6 @@ jobs:
         run: git push --delete origin ${{ steps.datetime.outputs.time }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
-      - name: 输出变量
-        run: |
-          echo ${{ steps.create_release.outputs.upload_url }}
-          echo ${{ needs.release.steps.create_release.outputs.upload_url }}
 
   upload:
     needs: [build, release]
@@ -80,7 +79,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          upload_url: ${{ needs.release.steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.release.outputs.upload_url }}
           asset_path: ./${{ matrix.name }}
           asset_name: ${{ matrix.name }}
           asset_content_type: application/octet-stream
