--- a/.github/workflows/ipinfo.yml
+++ b/.github/workflows/ipinfo.yml
@@ -11,14 +11,14 @@ jobs:
   release:
     runs-on: ubuntu-latest
     outputs:
-      success: ${{ steps.download_file.outputs.success }}
-      body: "${{ steps.download_file.outputs.body }}"
+      success: ${{ steps.check_file.outputs.success }}
+      body: "${{ steps.check_file.outputs.body }}"
       upload_url: ${{ steps.create_release.outputs.upload_url }}
       release_name: ${{ steps.release_name.outputs.name }}
     steps:
       - uses: actions/checkout@master
-      - name: Download ipinfo geoip2 database
-        id: download_file
+      - name: Check ipinfo geoip2 database
+        id: check_file
         run: |
           body=$(/bin/bash -e ./src/ipinfo.io.sh ${{ secrets.IPINFO_TOKEN }})
           if [ -z "$body" ]; then
@@ -58,10 +58,14 @@ jobs:
           - name: ipinfo/country_asn.mmdb
           - name: ipinfo/country_asn.json.gz
           - name: ipinfo/country_asn.csv.gz
-          - name: ipinfo.io.zip
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - name: Download geoip2 ${{ matrix.name }} database
+        id: download_file
+        run: |
+          mkdir -p ./ipinfo
+          wget https://ipinfo.io/data/free/${{ matrix.name }}?token=${{ secrets.IPINFO_TOKEN }} -O ./ipinfo/${{ matrix.name }}
       - name: Init File Info
         id: file_info
         run: |
