--- a/.github/workflows/ipinfo.yml
+++ b/.github/workflows/ipinfo.yml
@@ -64,7 +64,6 @@ jobs:
           - name: country_asn.csv.gz
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
       - name: Download geoip2 ${{ matrix.name }} database
         id: download_file
         run: |
@@ -87,6 +86,6 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./${{ matrix.name }}
+          asset_path: ./ipinfo/${{ matrix.name }}
           asset_name: ${{ steps.file_info.outputs.filename }}
           asset_content_type: ${{ steps.file_info.outputs.filemime }}
