<更新>body数据展示

--- a/.github/workflows/ipinfo.yml
+++ b/.github/workflows/ipinfo.yml
@@ -46,6 +46,7 @@ jobs:
           release_name: Release ${{ steps.release_name.outputs.name }}
           draft: false
           prerelease: false
+          body: ${{ steps.check_file.outputs.body }}
 
   upload:
     needs: [release]
