--- a/.github/workflows/ipinfo.yml
+++ b/.github/workflows/ipinfo.yml
@@ -26,7 +26,7 @@ jobs:
             exit 0
           fi
           echo "success=true" >> "$GITHUB_OUTPUT"
-          echo "body=\"$newbody\"" >> "$GITHUB_OUTPUT"
+          echo "body=\"$body\"" >> "$GITHUB_OUTPUT"
       - name: Release Name Building
         id: release_name
         run: echo "name=V$(date +%Y%m%d%H)" >> "$GITHUB_OUTPUT"
