--- a/.github/workflows/ipinfo.yml
+++ b/.github/workflows/ipinfo.yml
@@ -26,7 +26,6 @@ jobs:
       - name: Check ipinfo geoip2 database
         id: check_file
         run: |
-          ls -la
           echo "列出 ./checksums 目录"
           ls -la ./checksums
           body=$(/bin/bash -e ./src/ipinfo.io.sh ${{ secrets.IPINFO_TOKEN }})
@@ -34,7 +33,9 @@ jobs:
       - name: Release Name Building
         if: ${{ steps.check_file.outputs.success }} == true
         id: release_name
-        run: echo "name=V$(date +%Y%m%d%H)" >> "$GITHUB_OUTPUT"
+        run: |
+          echo "是否执行下部分操作 ${{ steps.check_file.outputs.success }}"
+          echo "name=V$(date +%Y%m%d%H)" >> "$GITHUB_OUTPUT"
       - name: Create Tag
         if: ${{ steps.check_file.outputs.success }} == true
         run: |
@@ -63,7 +64,7 @@ jobs:
           key: ${{ steps.restore_checksums.outputs.cache-primary-key }}
   upload:
     needs: [release]
-    if: ${{ needs.release.outputs.success }} == true && false
+    if: ${{ needs.release.outputs.success }} == true
     strategy:
       matrix:
         include:
