--- a/.github/workflows/ipinfo.yml
+++ b/.github/workflows/ipinfo.yml
@@ -6,7 +6,7 @@ name: download ipinfo.io geoip database
 on: 
   workflow_dispatch:
   schedule:
-    - cron: "30 * * * *"
+    - cron: "30 3,11,19 * * *"
 jobs:
   release:
     runs-on: ubuntu-latest
